fix dark mode bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,12 +21,19 @@ a {
   box-sizing: border-box;
 }
 
-.neumorphism-shadow {
+.dark .dark\:.neumorphism-shadow {
   box-shadow: 6px 6px 17px #0c0c0c, -6px -6px 17px #232323;
 }
-.neumorphism-pressed {
+.dark .dark\:.neumorphism-pressed {
   box-shadow: inset 2px 2px 4px #0f0f0f, inset -2px -2px 4px #1f1f1f;
 }
+.neumorphism-shadow {
+  box-shadow: 6px 6px 17px #0c0c0c, -6px -6px 17px #f0f0f0;
+}
+.neumorphism-pressed {
+  box-shadow: inset 2px 2px 4px #0f0f0f, inset -2px -2px 4px #e9e9e9;
+}
+
 /* .neumorphism-pressed {
   box-shadow: inset 1px 1px 3px #0f0f0f, inset -1px -1px 3px #1f1f1f;
 } */
